--- a/features/in-app-purchases/closed-testing.mdx
+++ b/features/in-app-purchases/closed-testing.mdx
@@ -1,193 +1,178 @@
 ---
-title: Closed Testing
-slug: closed-testing
-excerpt: Testing purchases in Play Store Sandbox
-hidden: false
+title: "Closed Testing Setup"
+description: "Set up closed testing for your Android app to enable in-app purchase testing"
 ---
+
+## Prerequisites
+
+Before setting up closed testing, make sure you have:
+
+- A Google Play Console developer account
+- Your app's package name ready (from `app.json`)
+- Access to create and manage apps in Google Play Console
 
 ## Create your app in Google Play Console
 
-Open [Google Play Console](https://play.google.com/console/).
-Select **All apps** > **Create app**.
+<Steps>
+  <Step title="Create New App">
+    1. Open [Google Play Console](https://play.google.com/console/)
+    2. Select **All apps** > **Create app**
+    
+    ### App Details
+    - Select a default language and add your app name as it should appear on Google Play
+    - Specify whether your application is an app or a game
+    - Specify whether your application is free or paid
+    - Add an email address for Play Store users to contact you
+    
+    ### Declarations
+    - Acknowledge the "Developer Program Policies" and "US export laws" declarations
+    - Accept the Play App Signing Terms of Service
+    
+    3. Click **Create app**
+  </Step>
 
-Under **App Details** section:
-- Select a default language and add the name of your app as you want it to appear on Google Play. You can change this later.
-- Specify whether your application is an app or a game. You can change this later.
-- Specify whether your application is free or paid.
-- Add an email address that Play Store users can use to contact you about this application.
+  <Step title="Complete App Setup">
+    When the app is created, you'll be taken to the app's **Dashboard** page.
 
-Under **Declarations** section:
-- Acknowledge the “Developer Program Policies” and “US export laws” declarations.
-- Accept the Play App Signing Terms of Service.
+    1. Click **View tasks** in the **Finish setting up your app** section
+    2. Complete all tasks in the checklist:
 
-Click **Create app**.
+    **Let us know about the content of your app:**
+    - Set privacy policy
+    - App access
+    - Ads
+    - Content rating
+    - Target audience
+    - Data safety
+    - Government apps
+    - Financial features
+    - Health
 
-## Finish setting up your app
+    **Manage how your app is organized and presented:**
+    - Select an app category and provide contact details
+    - Set up your store listing
 
-When the app is created you will be taken to the app's **Dashboard** page.
+    Once all tasks are completed, you can proceed to **Closed testing**.
+  </Step>
+</Steps>
 
-On the page you will see a **Finish setting up your app** section. 
-Click **View tasks**. 
+## Set Up Closed Testing
 
-Do all tasks in the checklist:
+Once you've completed the app setup, you can access **Closed testing** from:
+- Your app's **Dashboard** page, or
+- **Test and release** > **Testing** > **Closed testing** in the left sidebar
 
-Let us know about the content of your app
-- Set privacy policy
-- App access
-- Ads
-- Content rating
-- Target audience
-- Data safety
-- Government apps
-- Financial features
-- Health
+<Steps>
+  <Step title="Enable Billing in Your Project">
+    To enable billing functionality in your Expo/React Native project:
 
-Manage how your app is organized and presented
-- Select an app category and provide contact details
-- Set up your store listing
+    1. Install required packages:
+    ```bash
+    npx expo install expo-superwall react-native-purchases expo-build-properties
+    ```
 
-Once they are all done, you can move on to **Closed testing**.
+    2. Add the expo plugin to your `app.json`:
+    ```json
+    [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "16.0"
+          },
+          "android": {
+            "minSdkVersion": 26
+          }
+        }
+    ]
+    ```
 
-## Closed testing
+    This will install the necessary packages and configure your project with the minimum SDK versions required for in-app purchases. These packages will automatically add the necessary `BILLING` permission to your Android app.
+  </Step>
 
-Once you are done with **Finish setting up your app** you will be able to access **Closed testing** on your app's **Dashboard** page.
+  <Step title="Create EAS Production Build">
+    1. Build your app for production:
+    ```bash
+    eas build -p android --profile production
+    ```
 
-You can also access **Closed testing** from the **Test and release** > **Testing** > **Closed testing** in the left sidebar.
+    2. Track the build progress:
+       - Open the URL printed in the terminal, or
+       - Visit the [EAS dashboard](https://expo.dev/accounts/[YOUR_ACCOUNT]/projects/[YOUR_PROJECT]/builds)
+       - Select your newly created production build
 
-Here are the steps we will follow to set up the closed testing track:
+    3. When the build completes:
+       - Under **Build artifacts**, click **Download** to get the **.aab** file
+       - This file will be used to upload to Google Play Console
+  </Step>
 
-1. Set up your closed test track
-    - Select countries and regions
-    - Select testers
+  <Step title="Configure Closed Test Track">
+    1. Navigate to the **Closed testing** section in Google Play Console
+    2. You'll see a pre-created **Closed testing - Alpha** track
+    3. Click **Manage track** on this track
 
-2. Create and roll out a release
-    - Create a new release
-    - Preview and confirm the release
-    - Send the release to Google for review
+    ### Select Countries
+    1. Click the checkbox next to the countries you want to include
+    2. Make sure to select the country where you'll be testing
+    3. Or select all countries by clicking the checkbox next to **Country / region** at the top
+    4. Click **Save**
 
-### Enable billing for your project
-To enable billing functionality in your Expo/React Native project:
+    ### Select Testers
+    1. Click **Create email list**
+       - **List name:** Name it (e.g., "Testers")
+       - **Add email addresses:** Add your testing email address (the one you're signed in with on your testing device)
+       - Add any other email addresses you want to test with
+       - Click **Save changes**
+    2. Enable the list you just created
+    3. **Feedback URL or email address:** Add your email address for feedback
+    4. Click **Save**
+  </Step>
 
-- Run:
-```bash
-npx expo install expo-superwall react-native-purchases expo-build-properties
-```
+  <Step title="Create and Release Your Build">
+    ### Upload Your Build
+    1. **App bundles:** Click **Upload** and select the Android App Bundle (.aab file) from the previous step
+    2. **Release name:** Name it (e.g., "First Test release")
+    3. **Release notes:** (Optional) Add release notes inside the `<en-US></en-US>` tags
+    4. Click **Next**
 
-- In `app.json`: add expo plugin
-```json
-[
-    "expo-build-properties",
-    {
-      "ios": {
-        "deploymentTarget": "16.0"
-      },
-      "android": {
-        "minSdkVersion": 26
-      }
-    }
-]
-```
+    ### Preview and Confirm
+    1. Review the release preview
+    2. If everything looks good, click **Save**
+    3. When the **Go to Publishing Overview** alert appears, click **Go to overview**
 
-This will install the necessary packages and configure your project with the minimum SDK versions required for in-app purchases. These packages will automatically add the necessary `BILLING` permission to your Android app.
+    ### Send for Review
+    1. Google will run automatic checks for common issues
+    2. If there are issues: View and fix them, then return to **Overview**
+    3. If no issues: Click **Send X change(s) for review**
+    4. Confirm by clicking **Send changes for review**
+    
+    Reviews are typically completed within 7 days, but small releases are usually approved within a day.
+  </Step>
 
-### Create an EAS production build
+  <Step title="Configure License Testing">
+    To test in-app purchases, you need to configure license testing:
 
-```bash
-eas build -p android --profile production
-```
+    1. Open [Google Play Console](https://play.google.com/console/)
+    2. In the sidebar, click **Settings**
+    3. Scroll down to find **License testing** under **Monetization** and click it
+    4. **Choose license testers:** Use the testers list you created in the closed testing track
+    5. Make sure the account you're using on your Android testing device is added to the testers list
+    6. **License response:** Select **RESPOND_NORMALLY**
+    7. Click **Save changes**
+  </Step>
+</Steps>
 
-The build will queue and start building. You will updates on the progress in the terminal. When it's done:
+## How Testers Join Your Closed Test
 
-- Open the URL that was printed in the terminal to track the build progress
-or
-- Open the [EAS dashboard](https://expo.dev/accounts/[YOUR_ACCOUNT]/projects/[YOUR_PROJECT]/builds).
-- Pick the newly added production build
-
-When the build is done:
-- Under **Build artifacts** click on **Download** to get the **.aab** file.
-
-This is the file we will use to upload to Google Play Console.
-
-### Create a closed test track
-
-Make sure you are in the **Closed testing** section. 
-You will already have a closed test track created when you created your app (Closed testing - Alpha).
-
-On this **Closed testing - Alpha** track: Click **Manage track**
-
-You will now see the **Set up closed testing track** checklist.
-
-1. **Select countries**
-    - Click the checkbox next to the countries you want to 
-    - Make sure you select the country where you are testing from
-    - You also just pick all countries
-      - Click the checkbox next to **Country / region** at the top, to check all countries
-    - Click **Save**
-
-2. **Select testers**
-    - Click **Create email list**
-      - List name: Name it whatever you'd like (e.g. "Testers")
-      - Add email addresses: Add your testing email address (the one you are signed in with on your testing device)
-        - Add any other email addresses you want to test with too
-      - Click **Save changes**
-    - Enable the list you just created
-    - Feedback URL or email address: Add your email address for feedback
-    - Click **Save**
-
-<Accordion title="How testers join your closed test">
-
-### Let testers join
-
-You can find the Opt-in URL in the closed track you created under Testers > How testers join your test:
+You can find the Opt-in URL in the closed track you created under **Testers** > **How testers join your test**:
 - Join on Android
 - Join on the web
 
-Copy the url you want to use and open it in your testing device (or any browser that's logged in with that testing user) to make the user a tester. 
+Copy the URL and open it on your testing device (or any browser logged in with that testing user) to make the user a tester.
 
-Opening the link in the browser will show a Google Play page with a **BECOME A TESTER** button. Press that button and your user will be able to make testing purchases on your testing device.
+Opening the link will show a Google Play page with a **BECOME A TESTER** button. Press that button and your user will be able to make testing purchases on your testing device.
 
 They will also be added as a tester in the closed testing track. You need 12 users testing your app for 14 days to be able to publish your app to the Play Store.
-</Accordion>
 
+## Next Steps
 
-3. **Create a new release**
-    - App bundles: Click **Upload**, and select the Android App Bundle (file ending with .aab) we just built and downloaded in the previous step.
-    - Release name: Name it whatever you'd like (e.g. "First Test release")
-    - Release notes: (optional) Add any release notes you'd like, INSIDE of the `<en-US></en-US>` tags
-    - Click **Next**
-
-4. **Preview and confirm the release**
-    - You will see a preview of the release, before you send it to Google for review.
-    - If all looks good: Click **Save**
-    - Then an **Go to Publishing Overview** alert will pop up. 
-      - Click **Got to overview**
-
-5. **Send the release to Google for review**
-    - Some automatic quick checks for commonlly found issues will run.
-      - You will get notified on any issues with your release.
-    - If there are issues: View issues and fix them. Then go back to **Overview**
-    - If there are no issues: Click **Send X change(s) for review**
-        - Confirm by clicking **Send changes for review**
-    - It says reviews are typically completed within 7 days, but may take longer.
-    - However, these small releases are usually approved within a day.
-
-  Now, you just wait for the review to be completed.
-
-### Configure licensing testing
-
-In order to be able to test in-app purchases in the next steps of the development you are going to need to use a test user. This test user will be the user that you logged in first in your Android testing device. Note that the only way to changing the primary account on a device is to do a factory reset.
-
-Open [Google Play Console](https://play.google.com/console/). 
-In the sidebar, click on **Settings**.
-Scroll down to find **License testing** under **Monetization**. Press the arrow on the right to open it.
-
-Choose license testers from the email lists: Just use the testers list you created in the closed testing track.
-
-- Make sure the account you are using in your real Android testing device (the account you are logged in with) is added to the testers list.
-
-License response: Pick **RESPOND_NORMALLY** 
-
-Press **Save changes**.
-
-## What now?
-You can now add real subscription products to your Android app. 
+You can now add real subscription products to your Android app using the [Android Products Setup](./android-products) guide.
